--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,17 @@ body {
   margin-bottom: 1rem;  
 }
 
+.link {
+  color: white;
+  background: black;
+  width: 5rem;
+  transition-duration: 1s;
+}
+
+.link:hover {
+  color: black;
+  background: white;
+}
 
 h6 {
   font-family: "Open Sans";
