--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
+}
+
+:root {
+    --scrollbar-pos: 0; 
+}
+::-webkit-scrollbar { 
+    display: none; 
 }
 
 #background {
@@ -36,45 +44,64 @@ body {
   /*text-align: center;*/
 }
 
+#scrollbarContainer {
+    position: fixed;
+    width: 100%;
+    height: 10px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+}
+#scrollbar {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    /*background: rgb(131,58,180);
+    background: -moz-linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,188,69,1) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,188,69,1) 100%);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,188,69,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#833ab4",endColorstr="#fcbc45",GradientType=1);*/
+    background: linear-gradient(270deg, #f2b859, #59f2c4, #dc7eff, #ff7e7e, #7ed0ff, #fff77e);
+    background-size: 1200% 1200%;
+
+    -webkit-animation: BackgroundScroll 10s ease infinite;
+    -moz-animation: BackgroundScroll 10s ease infinite;
+    animation: BackgroundScroll 10s ease infinite;
+    left: 0px;
+}
+
 #main {
-  margin: auto;  
-  /*width: 1024px;*/
   width: 100%;
 }
 
 #feature {
   margin: auto;
   width: 100%;
-  text-align: center;  
+  text-align: center; 
 }
 
 #feature img {
   width: 1024px;
-  margin-top: 3rem;
+  margin-top: 2em; 
 }
 
 #badges {
   text-align: center;  
-  margin-left: 3rem;
-  size: 80%;
+  margin-left: 3em;
 }
 
 #google-badge {
-  height: 8.65rem;
+  height: 8.65em;
 }
 
 #apple-badge {
-  height: 6rem;
-  margin-bottom: 1.3rem;
+  height: 6em;
+  margin-bottom: 1.3em;
 }
 
 .content {
   width: 1024px;
-  margin: auto;
-}
-
-.feature-text {
-  /*padding: 2.2rem;*/
+  margin: auto; 
 }
 
 .centered {
@@ -82,51 +109,49 @@ body {
 }
 
 .body-text {
-  padding: 2.2rem;
+  padding: 1em;
 }
 
 .footer {
   text-align: center;
-  margin-bottom: 1rem;  
+  margin-bottom: 1em;  
+  width: 100%;
 }
 
-.link {
-  color: white;
-  background: black;
-  width: 5rem;
-  transition-duration: 1s;
-}
-
-.link:hover {
-  color: black;
-  background: white;
+.external-link-icon {
+  padding-left: 0.5em;
+  height: 0.9em !important;
 }
 
 h6 {
   font-family: "Open Sans";
   font-size: 2.2rem;
-  padding: 2rem;
+  padding: 1em;
   text-align: center;
 }
 
 p {
-  font-family: "Open Sans";
-  font-size: 1.8rem;
+	font-family: "Open Sans";
+	font-size: 2rem;
   color: black;
 }
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 hr {
   border: 1px solid black;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 2rem;
 }
 
 ul {
   list-style: none;
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-family: "Open Sans";
+}
+
+li p {
+  display: inline-block;
 }
